2006-12-08  Joachim Noreiko  <jnoreiko@yahoo.com>

  * C/seahorse.xml: patch from milo_casagrande@yahoo.it. #379206
    Rewritten section 'Creating Secure Shell Keys' to be cleaner

2006-12-06  Joachim Noreiko  <jnoreiko@yahoo.com>

  * C/seahorse.xml: patch from milo_casagrande@yahoo.it. #379206
    Also some proofreading.

2006-12-05  Joachim Noreiko  <jnoreiko@yahoo.com>

  * C/figures/seahorse-window.png: Adding new screenshot of UI.
  * C/seahorse.xml: Further updates.
    Both from milo_casagrande@yahoo.it. #379206

2006-12-01  Joachim Noreiko  <jnoreiko@yahoo.com>

  * C/seahorse.xml: make app name consistent and 
      explain 'Seahorse' in About section. #379206

2006-11-28  Nate Nielsen  <nielsen@memberwebs.com>

  * C/seahorse.xml: Describe PGP better Patch from 
    milo_casagrande@yahoo.it on #376685

2006-11-27  Joachim Noreiko  <jnoreiko@yahoo.com>

 * C/seahorse.xml: Update to manual. Patch from milo_casagrande@yahoo.it on #376685

2006-11-25  Joachim Noreiko  <jnoreiko@yahoo.com>

 * C/seahorse.xml: 
     Update to manual. Patch from milo_casagrande@yahoo.it on #376685
     Updating Feedback link and stock GFDL mention from new GDU template

2006-11-17  Adam Schreiber  <sadam@clemson.edu>
    * Makefile.am: Fixed DOC_LINGUAS to have both 
    it and sv

2006-11-06  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added initial Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS.

2006-11-06  Adam Schreiber  <sadam@clemson.edu>

    * help/Makefile.am: Added it lingua
    * help/it: Added Directory
    * help/it/it.po: Added file from 
    Milo Casagrande
    * help/it/.cvsignore