@@ -2,6 +2,7 @@
 
   * C/seahorse.xml: patch from milo_casagrande@yahoo.it. #379206
     Rewritten section 'Creating Secure Shell Keys' to be cleaner
+    Another patch from milo, rewriting 'Creating OpenPGP Keys' similarly. #379206
 
 2006-12-06  Joachim Noreiko  <jnoreiko@yahoo.com>
 
